2011-04-19	Dmitry Dulepov	<dmitry.dulepov@gmail.com>

	* Fixed bug #18081: With default config RealURL accepts pages with .html suffix as long as with /
	* Fixed bug #17944: "Excludes from speaking URL" for "Visual menu separator"
	* Fixed bug #16001: Error in documentation: parameter condPrevValue is wrong, should be cond['prevValueInList']

2011-04-14	Dmitry Dulepov	<dmitry.dulepov@gmail.com>

	* Fixed bug #18077: Wrong table column name (thanks to Juris Treibahs)
	* Fixed bug #18047: 1.10.2 treats tx_realurl_pathsegment as entire url regardless of tx_realurl_pathoverride
	* Fixed bug #18099: Use only detected language when decoding
	* Fixed bug #18042: pagePath.spaceCharacter empty not supported anymore

2011-03-23	Dmitry Dulepov	<dmitry.dulepov@gmail.com>

	* Removed autoUpdatePathCache and firstHitPathCache because they causes random hard to catch problems (404 errors and performance issues)
	* Added "Thanks!" section to the end of the manual

2011-03-22	Dmitry Dulepov	<dmitry.dulepov@gmail.com>

	* Added a new experimental "optional" directive

2011-02-15  Dmitry Dulepov	<dmitry.dulepov@gmail.com>

	* Fixed bug #17514: Wrong html breaks table layout
	* FIxed bug #17505: array_unique in tx_realurl_advanced->fetchPagesForPath produces incorrect results

2011-01-31  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Released version 1.10.2

2011-01-27  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #15929: lookUpTable to localize tt_news single view URL does not work
	* Fixed bug #16748: URL ending in '?' gets trailing slash from appendMissingSlash

2010-11-17  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #16398: MySQL extended syntax is not used in case of persistent connections
	* Released version 1.10.1

2010-11-09  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #16222: Typo in csh
	* Fixed bug: sorting direction cannot be changed in redirects view

2010-11-03  Dmitry Dulepov  <dmitry@typo3.org>
