@@ -3,6 +3,7 @@
 	* Fixed bug #18081: With default config RealURL accepts pages with .html suffix as long as with /
 	* Fixed bug #17944: "Excludes from speaking URL" for "Visual menu separator"
 	* Fixed bug #16001: Error in documentation: parameter condPrevValue is wrong, should be cond['prevValueInList']
+	* Fixed bug #16340: resolveShortcut fails to resolve shortcuts with a mode which leads to a mountpoint (thanks to Popy)
 
 2011-04-14	Dmitry Dulepov	<dmitry.dulepov@gmail.com>
 
